added edit of database page succesfully
