# app/api/api.py
@@ -1,7 +1,9 @@
 from flask import Flask, request, jsonify, send_from_directory
 from flask_swagger_ui import get_swaggerui_blueprint
-from db import add_user, get_users, authenticate_user, get_diseases, initialize_db
+from db import add_user, get_users, authenticate_user, get_diseases, update_diseases, initialize_db
 import os
+from io import StringIO
+import pandas as pd
 
 app = Flask(__name__)
 
@@ -66,6 +68,22 @@ def diseases():
         if not diseases:
             return jsonify({"message": "No diseases found"}), 404
         return jsonify({"diseases": diseases}), 200
+    except Exception as e:
+        return jsonify({"message": str(e)}), 500
+
+@app.route('/update_diseases_route', methods=['POST'])
+def update_diseases_route():
+    data = request.get_json()
+    df = data.get('diseases')
+    
+    if df is None or not df:
+        return jsonify({"message": "No data provided"}), 400
+    if pd.read_json(StringIO(df)).isnull().values.any():
+        return jsonify({"message": "Data contains null values"}), 400
+    
+    try:
+        update_diseases(df)
+        return jsonify({"message": "Diseases updated successfully"}), 200
     except Exception as e:
         return jsonify({"message": str(e)}), 500
 
