# app/api/db.py
@@ -1,7 +1,7 @@
 import sqlite3
 import bcrypt
-
-
+import pandas as pd
+from io import StringIO
 
 def create_connection():
     """Create a database connection and return the connection object."""
@@ -89,5 +89,22 @@ def get_diseases():
     conn.close()
     return diseases
 
+def update_diseases(df):
+    """Update diseases in the database."""
+    conn = create_connection()
+    df = pd.read_json(StringIO(df))
+    df.to_sql('Disease', conn, if_exists='replace', index=False)
+    conn.commit()
+    conn.close()
+
 if __name__ == "__main__":
     initialize_db()
+    
+    diseases = get_diseases()
+    print(diseases)
+    
+    json_df = '[{"Id":1,"Nom":"COVID-19","Country_Region":"USA","Confirmed":5000000,"Deaths":150000,"Recovered":2500000,"Active":2350000,"New_cases":50000,"New_deaths":1000,"New_recovered":20000},{"Id":2,"Nom":"Ebola","Country_Region":"Congo","Confirmed":3000,"Deaths":2000,"Recovered":800,"Active":200,"New_cases":50,"New_deaths":20,"New_recovered":30},{"Id":3,"Nom":"SARS","Country_Region":"China","Confirmed":8000,"Deaths":774,"Recovered":7000,"Active":226,"New_cases":100,"New_deaths":10,"New_recovered":50},{"Id":4,"Nom":"MERS","Country_Region":"Saudi Arabia","Confirmed":2600,"Deaths":858,"Recovered":1400,"Active":242,"New_cases":20,"New_deaths":5,"New_recovered":10}]'
+    update_diseases(json_df)
+    
+    diseases = get_diseases()
+    print("\n\n\nUpdated Diseases:", diseases)
